--- a/styleMars.css
+++ b/styleMars.css
@@ -100,3 +100,17 @@ margin-left: auto;
     width: 500px;
     border: 5px solid black;
 }
+
+.pageIncrease{
+    font-size: 20px;
+    position: relative;
+    left: 60%;
+    top:35px;
+}
+.pageDecrease{
+    font-size: 20px;
+    position: relative;
+    left: 40%;
+    top:60px;
+   
+}
