--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     color: white;
     background-repeat: unset;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 #bottom {
@@ -36,6 +37,7 @@ body {
 
 #oldSearch {
     background-color:brown;
+    margin-top: 19px;
 }
 
 #searchPic {
@@ -46,6 +48,8 @@ body {
 #searchVid {
     background:greenyellow;
     width: 143px;
+    margin-top: 20px;
+}
 }
 
 #topBanner {
@@ -59,9 +63,10 @@ body {
 .topRow {
     display: grid;
     grid-template-rows: 200px 50% 154px;
-    grid-template-columns: 35% 65%;
+    grid-template-columns: 30% 60% 10%;
     padding: 3px;
     margin: 5px;
+}
 }
 
 
