--- a/styleMars.css
+++ b/styleMars.css
@@ -114,3 +114,36 @@ margin-left: auto;
     top:60px;
    
 }
+
+.solDates{
+    position: relative;
+    left: 40%;
+    top: 90px;
+    font-size: 40px;
+    margin: 0%;
+}
+
+.userSolDates{
+    position: relative;
+    left:-300px;
+    width:200px ;
+    height: 60px;
+    top:60px
+    
+}
+
+.changeSol{
+    position: relative;
+    left: -300px;
+    top:50px;
+    height: 60px;
+    width:100px ;
+    font-size: 20px;
+}
+.invalidSolDate{
+    position: relative;
+    top: 50px;
+    color: red;
+    display: none;
+}
+
