--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-
 * {
     margin:0%;
 }
 
 
 body {
+        background-image: url(background.jpg);
         background-color: black;
         background-size: cover;
         font-family: fantasy;
@@ -15,11 +15,19 @@ body {
 }
 
 .container {
-    width: 75%;
-    margin: 0px;
+    width: 100%;
     display: flex;
     flex-flow: column;
     align-items: center;
+}
+
+div#copyrightPic {
+    font-size: 25px;
+}
+
+div#titlePic {
+    font-size: 45px;
+    padding-top: 15px;
 }
 
  #explanationPic {
@@ -59,8 +67,15 @@ body {
     text-align: center;
     font-size: 25px;
     color: white;
+    margin-left: 20px;
+}
 }
 
+
+#searchVid {
+    display: none;
+    margin:0px;
+}
 
 ul {
     float: right;
