fixed the functionality of the date picker. it now works

--- a/styleMars.css
+++ b/styleMars.css
@@ -341,7 +341,7 @@ border: 3px solid orange;
    }
    .pageIncrease{
        top:238px;
-       left:;
+       left:0px;
    }
    .pageDecrease{
        left:-350px;
