fixing errors in css

--- a/style.css
+++ b/style.css
@@ -2,15 +2,14 @@
     margin:0%;
 }
 
+
 body {
-        background-image: url(background.jpg);
-        background-color: black;
-        background-size: cover;
-        font-family: fantasy;
-        color: white;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-repeat: no-repeat;
+   background-image: url(background.jpg);
+   background-color: black;
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center;
+   color: white;
 }
 
 .container {
@@ -22,17 +21,24 @@ body {
 
 div#copyrightPic {
     font-size: 25px;
+    margin-top: 10px;
 }
 
 div#titlePic {
-    font-size: 45px;
+    font-size: 35px;
     padding-top: 15px;
 }
 
  #explanationPic {
-    width: 50%;
+    background-color: gray;
+    color:black;
     display: flex;
+    font-family: ui-monospace;
+    font-stretch: semi-condensed;
+    font-weight: bolder;
+    line-height: 25px;
     margin: 15px;
+    width: 50%;
 }
 
 #from-datepicker {
@@ -40,22 +46,38 @@ div#titlePic {
     text-align: center;
 }
 
-#topBanner {
-    background: blue;
+#goToMarsPage {
+    background-color: cornflowerblue;
+    bottom: 80%;
     display: flex;
-    font-family: 'DotGothic16', sans-serif;
-    height: 125px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    font-size: 55px;
-    color: wheat;
+    margin-left: 10px;
+    position: absolute;
+}
+
+li {
+    border: 2px solid white;
+    background: dimgrey;
+    color: black;
+    font-size: 25px;
+    width: 160px;
+}
+#oldSearch {
+    bottom: 100%;
+    display: flex;
+    flex-direction: column;
+    float: right;
+    margin: 0px;
+    margin-right: 30px;
+    padding-bottom: 16%;
+    position: sticky;
+    width: 150px;
 }
 
 #potdImg {
     float: left;
-    width: 500px;
     height: 500px;
+    border: 5px solid whitesmoke;
+    width: 550px;
 }
 
 #searchPic {
@@ -66,17 +88,33 @@ div#titlePic {
     text-align: center;
     font-size: 25px;
     color: white;
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-top: 10px;
+    border: 2px solid white;
 }
+
 
 #searchVid {
     display: none;
     margin:0px;
 }
 
-ul {
-    float: right;
+#topBanner {
+    align-items: center;
+    background: linear-gradient(45deg, black, transparent);
+    background-position: bottom;
+    background-position-x: left;
+    color: whitesmoke;
     display: flex;
+    font-size: 60px;
+    height: 125px;
+    justify-content: center;
+    width: 100%;
+}
+
+ul {
+    display: flex;
+    float: right;
     flex-direction: column;
 }
 
